# opendmxadapter

./: README.md  adapter.py  pyproject.toml
examples/: simplehueswitcher.py
fixtures/: basefixture.py
fixtures/cameo/: rootpar6.py
fixtures/eurolite/: tmhx4.py
opendmxadapter/: __init__.py  adapter.py
opendmxadapter/fixtures/: basefixture.py
opendmxadapter/fixtures/cameo/: rootpar6.py
opendmxadapter/fixtures/eurolite/: tmhx4.py
